# gltut-rust

./: .hgignore  Cargo.toml  LICENSE  README.md  bitbucket-pipelines.yml  rustfmt.toml
data/tut02/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
data/tut03/: SimpleTransform.vertexshader
data/tut05/: TextureFragmentShader.fragmentshader
src/libtutcommon/: controls.rs  glutils.rs  lib.rs  matrix.rs  objloader.rs  sdl.rs
src/tut01/: main.rs
src/tut02/: glscene.rs  main.rs
src/tut03/: glscene.rs  main.rs
src/tut04/: glscene.rs  main.rs
src/tut05/: glscene.rs  main.rs
src/tut06/: glscene.rs  main.rs
src/tut07/: glscene.rs  main.rs
